--- a/.github/workflows/master_dp-mobile-app-service.yml
+++ b/.github/workflows/master_dp-mobile-app-service.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '20.x'
 
       - name: yarn install, build, and test
+      - working-directory: ./mobile-app-api
         run: |
           yarn install
           yarn run build --if-present
