--- a/.github/workflows/master_dp-mobile-app-service.yml
+++ b/.github/workflows/master_dp-mobile-app-service.yml
@@ -25,8 +25,8 @@ jobs:
         working-directory: ./mobile-app-api
         run: |
           yarn install
-          yarn run build --if-present
-          yarn run test --if-present
+          yarn run build
+          yarn run test
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
