--- a/.github/workflows/master_dp-mobile-app-service.yml
+++ b/.github/workflows/master_dp-mobile-app-service.yml
@@ -21,12 +21,10 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: yarn install, build, and test
+      - name: yarn install
         working-directory: ./mobile-app-api
         run: |
           yarn install
-          yarn run build
-          yarn run test
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
