--- a/mobile-app-api/package.json
+++ b/mobile-app-api/package.json
@@ -48,6 +48,7 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
