--- a/mobile-app-api/package.json
+++ b/mobile-app-api/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
     "@nestjs/axios": "^3.0.1",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,8 @@
     "@types/multer": "^1.4.11",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.5.2",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "firebase-admin": "^12.0.0",
@@ -55,7 +58,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.12.12",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
